Add .gitignore file, enhance README with cloud database setup, and update RUN.ps1 for local/cloud MongoDB modes

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,16 @@
+# MongoDB Mode: local or cloud
+mongodb.mode=local
+
+# Local MongoDB (Docker)
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=supermarket_stock
 spring.data.mongodb.username=stockapp
 spring.data.mongodb.password=stockpass123
 spring.data.mongodb.authentication-database=supermarket_stock
+
+# Cloud MongoDB (MongoDB Atlas) - Use -DbMode cloud when running
+# The connection string will be provided via environment variable when using cloud mode
 
 server.port=8080
 
