--- a/backend/src/main/resources/application-cloud.properties
+++ b/backend/src/main/resources/application-cloud.properties
@@ -2,6 +2,11 @@
 # The connection string will be provided via environment variable MONGODB_URI
 spring.data.mongodb.uri=${MONGODB_URI}
 
+# MongoDB connection settings
+spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.option.ssl.enabled=true
+spring.data.mongodb.option.ssl.invalid-host-name-allowed=false
+
 server.port=8080
 
 # CORS configuration
@@ -9,3 +14,16 @@ spring.mvc.cors.allowed-origins=http://localhost:4200
 spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.mvc.cors.allowed-headers=*
 spring.mvc.cors.allow-credentials=true
+
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.displayRequestDuration=true
+springdoc.swagger-ui.docExpansion=none
+springdoc.swagger-ui.defaultModelsExpandDepth=1
+springdoc.swagger-ui.defaultModelExpandDepth=1
+springdoc.swagger-ui.supportedSubmitMethods=get,post,put,delete,patch
