--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,3 +19,20 @@ spring.mvc.cors.allowed-origins=http://localhost:4200
 spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.mvc.cors.allowed-headers=*
 spring.mvc.cors.allow-credentials=true
+
+# JWT Configuration
+jwt.secret=your-256-bit-secret-key-for-jwt-token-generation-must-be-at-least-256-bits-long-for-security
+jwt.expiration=86400000
+
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.displayRequestDuration=true
+springdoc.swagger-ui.docExpansion=none
+springdoc.swagger-ui.defaultModelsExpandDepth=1
+springdoc.swagger-ui.defaultModelExpandDepth=1
+springdoc.swagger-ui.supportedSubmitMethods=get,post,put,delete,patch
